changed imports, bumped version, added utils init

--- a/examples/Pyomo example notebook.ipynb
+++ b/examples/Pyomo example notebook.ipynb
@@ -35,7 +35,7 @@
     "import numpy as np\n",
     "import pyomo.environ as pyo\n",
     "\n",
-    "from relumip.ann_model import AnnModel\n",
+    "from relumip import AnnModel\n",
     "from relumip.utils.visualization import plot_results_2d"
    ]
   },
