final test on testpypi complete, modeified, gitignore

--- a/examples/Pyomo example notebook.ipynb
+++ b/examples/Pyomo example notebook.ipynb
@@ -176,10 +176,10 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "e3cab40455029aef2001176ce5da11bb72a45f6bcb75c631bcc1f395a3521aae"
+   "hash": "757c2790c166bf970fea62bb6876eec8c63558688aa8e614772587c9581994f3"
   },
   "kernelspec": {
-   "display_name": "Python 3.7.11 64-bit ('reluMIP_test3': conda)",
+   "display_name": "Python 3.7.11 64-bit ('reluMIP_test': conda)",
    "name": "python3"
   },
   "language_info": {
